started with the javascript to display the contents  from an array

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
                 <img class="my-img" src="images/me.jpg"/>
             </div>   
         </div>
-
     </header>
+    <main>
+        
+        <section>
 
-    <section>
-
-    </section>
+        </section>
+    </main>
  
     <footer>
 
